Update Spring projects dependencies to latest BUILD-SNAPSHOT

--- a/build.gradle
+++ b/build.gradle
@@ -46,15 +46,15 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.1.12.RELEASE'
+		springVersionDefault = '5.1.13.BUILD-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.2.4.RELEASE'
-		springAmqpVersion = '2.1.12.RELEASE'
-		springDataCommonsVersion = '2.1.14.RELEASE'
-		springDataGemfireVersion = '2.1.14.RELEASE'
-		springDataJpaVersion = '2.1.14.RELEASE'
-		springDataMongodbVersion = '2.1.14.RELEASE'
-		springDataNeo4jVersion = '5.1.14.RELEASE'
+		springAmqpVersion = '2.1.13.BUILD-SNAPSHOT'
+		springDataCommonsVersion = '2.1.15.BUILD-SNAPSHOT'
+		springDataGemfireVersion = '2.1.15.BUILD-SNAPSHOT'
+		springDataJpaVersion = '2.1.15.BUILD-SNAPSHOT'
+		springDataMongodbVersion = '2.1.15.BUILD-SNAPSHOT'
+		springDataNeo4jVersion = '5.1.15.BUILD-SNAPSHOT'
 		springIntegrationVersion = '5.1.9.RELEASE'
 		springLdapVersion = '2.3.2.RELEASE'
 
