--- a/build.gradle
+++ b/build.gradle
@@ -46,36 +46,36 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.2.0.RELEASE'
+		springVersionDefault = '5.2.4.BUILD-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
-		springRetryVersion = '1.2.4.RELEASE'
-		springAmqpVersion = '2.2.0.RELEASE'
-		springDataCommonsVersion = '2.2.0.RELEASE'
-		springDataGemfireVersion = '2.2.0.RELEASE'
-		springDataJpaVersion = '2.2.0.RELEASE'
-		springDataMongodbVersion = '2.2.0.RELEASE'
-		springDataNeo4jVersion = '5.2.0.RELEASE'
-		springIntegrationVersion = '5.2.0.RELEASE'
-		springKafkaVersion = '2.3.0.RELEASE'
+		springRetryVersion = '1.2.5.RELEASE'
+		springAmqpVersion = '2.2.4.BUILD-SNAPSHOT'
+		springDataCommonsVersion = '2.3.0.BUILD-SNAPSHOT'
+		springDataGemfireVersion = '2.3.0.BUILD-SNAPSHOT'
+		springDataJpaVersion = '2.3.0.BUILD-SNAPSHOT'
+		springDataMongodbVersion = '2.2.5.BUILD-SNAPSHOT'
+		springDataNeo4jVersion = '5.3.0.BUILD-SNAPSHOT'
+		springIntegrationVersion = '5.3.0.BUILD-SNAPSHOT'
+		springKafkaVersion = '2.4.2.BUILD-SNAPSHOT'
 		springLdapVersion = '2.3.2.RELEASE'
 
-		activemqVersion = '5.15.10'
+		activemqVersion = '5.15.11'
 		apacheAvroVersion ='1.9.1'
-		aspectjVersion = '1.9.4'
+		aspectjVersion = '1.9.5'
 		commonsDdbcpVersion = '2.7.0'
 		commonsIoVersion = '2.6'
 		commonsLangVersion = '3.9'
 		commonsPoolVersion = '1.6'
 		derbyVersion = '10.14.2.0'
 		groovyVersion = '2.5.8'
-		hamcrestVersion = '2.1'
-		h2databaseVersion = '1.4.199'
-		hibernateVersion = '5.4.5.Final'
-		hibernateValidatorVersion = '6.0.17.Final'
+		hamcrestVersion = '2.2'
+		h2databaseVersion = '1.4.200'
+		hibernateVersion = '5.4.9.Final'
+		hibernateValidatorVersion = '6.1.0.Final'
 		javaxElVersion = '3.0.0'
 		hsqldbVersion = '2.5.0'
-		jackson2Version = '2.10.0'
-		gsonVersion = '2.8.5'
+		jackson2Version = '2.10.1'
+		gsonVersion = '2.8.6'
 		javaMailVersion = '1.6.2'
 		javaxBatchApiVersion = '1.0'
 		javaxAnnotationApiVersion = '1.3.2'
@@ -84,15 +84,15 @@ allprojects {
 		jbatchTckSpi = '1.0'
 		jettisonVersion = '1.2' //? => upgrade to 1.4 and the build fails (deprecated anyway via xstream)
 		jmsVersion = '2.0.1'
-		junitVersion = '4.12'
-		log4jVersion = '2.12.1'
-		mysqlVersion = '8.0.17'
-		mockitoVersion = '3.0.0'
+		junitVersion = '4.13'
+		log4jVersion = '2.13.0'
+		mysqlVersion = '8.0.18'
+		mockitoVersion = '3.1.0'
 		postgresqlVersion = '42.2.8'
-		quartzVersion = '2.3.1'
+		quartzVersion = '2.3.2'
 		servletApiVersion = '4.0.1'
 		sqlfireclientVersion = '1.0.3'
-		sqliteVersion = '3.28.0'
+		sqliteVersion = '3.30.1'
 		woodstoxVersion = '5.2.0'
 		xmlunitVersion = '2.6.3'
 		xstreamVersion = '1.4.11.1'
@@ -100,10 +100,10 @@ allprojects {
 		beanshellVersion = '2.0b5'
 		jaxbApiVersion = '2.3.1'
 		jaxbImplVersion = '2.3.0.1'
-		micrometerVersion = '1.3.0'
-		prometheusPushgatewayVersion = '0.7.0'
+		micrometerVersion = '1.3.3'
+		prometheusPushgatewayVersion = '0.8.0'
 		docResourcesVersion = '0.1.1.RELEASE'
-		assertjVersion='3.13.2'
+		assertjVersion='3.15.0'
 	}
 
 	apply plugin: 'idea'
