--- a/build.gradle
+++ b/build.gradle
@@ -53,7 +53,7 @@ allprojects {
 		springDataCommonsVersion = '2.3.0.BUILD-SNAPSHOT'
 		springDataGemfireVersion = '2.3.0.BUILD-SNAPSHOT'
 		springDataJpaVersion = '2.3.0.BUILD-SNAPSHOT'
-		springDataMongodbVersion = '2.2.5.BUILD-SNAPSHOT'
+		springDataMongodbVersion = '3.0.0.BUILD-SNAPSHOT'
 		springDataNeo4jVersion = '5.3.0.BUILD-SNAPSHOT'
 		springIntegrationVersion = '5.3.0.BUILD-SNAPSHOT'
 		springKafkaVersion = '2.4.2.BUILD-SNAPSHOT'
@@ -104,6 +104,7 @@ allprojects {
 		prometheusPushgatewayVersion = '0.8.0'
 		docResourcesVersion = '0.1.1.RELEASE'
 		assertjVersion='3.15.0'
+		mongoDbDriverSyncVersion='4.0.0-beta1'
 	}
 
 	apply plugin: 'idea'
@@ -336,6 +337,7 @@ project('spring-batch-infrastructure') {
 		testRuntime "org.beanshell:bsh:$beanshellVersion"
 		testRuntime "com.sun.xml.bind:jaxb-core:$jaxbImplVersion"
 		testRuntime "com.sun.xml.bind:jaxb-impl:$jaxbImplVersion"
+		testRuntime "org.mongodb:mongodb-driver-sync:$mongoDbDriverSyncVersion"
 
 		optional "javax.jms:javax.jms-api:$jmsVersion"
 		optional "com.fasterxml.jackson.core:jackson-databind:${jackson2Version}"
@@ -605,6 +607,7 @@ project('spring-batch-samples') {
 		compile "org.apache.activemq:activemq-broker:$activemqVersion"
 		compile "io.micrometer:micrometer-registry-prometheus:$micrometerVersion"
 		compile "io.prometheus:simpleclient_pushgateway:$prometheusPushgatewayVersion"
+		compile "org.mongodb:mongodb-driver-sync:$mongoDbDriverSyncVersion"
 
 		testCompile "org.xmlunit:xmlunit-core:$xmlunitVersion"
 		testCompile "org.xmlunit:xmlunit-matchers:$xmlunitVersion"
