--- a/build.gradle
+++ b/build.gradle
@@ -46,35 +46,35 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.2.3.BUILD-SNAPSHOT'
+		springVersionDefault = '5.2.5.RELEASE'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
-		springRetryVersion = '1.2.4.RELEASE'
-		springAmqpVersion = '2.2.3.BUILD-SNAPSHOT'
-		springDataCommonsVersion = '2.2.4.BUILD-SNAPSHOT'
-		springDataGemfireVersion = '2.2.4.BUILD-SNAPSHOT'
-		springDataJpaVersion = '2.2.4.BUILD-SNAPSHOT'
-		springDataMongodbVersion = '2.2.4.BUILD-SNAPSHOT'
-		springDataNeo4jVersion = '5.2.4.BUILD-SNAPSHOT'
-		springIntegrationVersion = '5.2.3.BUILD-SNAPSHOT'
-		springKafkaVersion = '2.3.5.BUILD-SNAPSHOT'
+		springRetryVersion = '1.2.5.RELEASE'
+		springAmqpVersion = '2.2.5.RELEASE'
+		springDataCommonsVersion = '2.2.6.RELEASE'
+		springDataGemfireVersion = '2.2.6.RELEASE'
+		springDataJpaVersion = '2.2.6.RELEASE'
+		springDataMongodbVersion = '2.2.6.RELEASE'
+		springDataNeo4jVersion = '5.2.6.RELEASE'
+		springIntegrationVersion = '5.2.5.RELEASE'
+		springKafkaVersion = '2.3.7.RELEASE'
 		springLdapVersion = '2.3.2.RELEASE'
 
-		activemqVersion = '5.15.10'
-		apacheAvroVersion ='1.9.1'
-		aspectjVersion = '1.9.4'
+		activemqVersion = '5.15.12'
+		apacheAvroVersion ='1.9.2'
+		aspectjVersion = '1.9.5'
 		commonsDdbcpVersion = '2.7.0'
 		commonsIoVersion = '2.6'
 		commonsLangVersion = '3.9'
 		commonsPoolVersion = '1.6'
 		derbyVersion = '10.14.2.0'
-		groovyVersion = '2.5.8'
+		groovyVersion = '2.5.10'
 		hamcrestVersion = '2.1'
 		h2databaseVersion = '1.4.200'
-		hibernateVersion = '5.4.8.Final'
+		hibernateVersion = '5.4.12.Final'
 		hibernateValidatorVersion = '6.0.18.Final'
 		javaxElVersion = '3.0.0'
 		hsqldbVersion = '2.5.0'
-		jackson2Version = '2.10.0'
+		jackson2Version = '2.10.3'
 		gsonVersion = '2.8.6'
 		javaMailVersion = '1.6.2'
 		javaxBatchApiVersion = '1.0'
@@ -84,26 +84,26 @@ allprojects {
 		jbatchTckSpi = '1.0'
 		jettisonVersion = '1.2' //? => upgrade to 1.4 and the build fails (deprecated anyway via xstream)
 		jmsVersion = '2.0.1'
-		junitVersion = '4.12'
+		junitVersion = '4.13'
 		log4jVersion = '2.12.1'
-		mysqlVersion = '8.0.18'
-		mockitoVersion = '3.1.0'
-		postgresqlVersion = '42.2.8'
+		mysqlVersion = '8.0.19'
+		mockitoVersion = '3.3.3'
+		postgresqlVersion = '42.2.11'
 		quartzVersion = '2.3.2'
 		servletApiVersion = '4.0.1'
 		sqlfireclientVersion = '1.0.3'
 		sqliteVersion = '3.28.0'
-		woodstoxVersion = '5.2.0'
-		xmlunitVersion = '2.6.3'
+		woodstoxVersion = '5.2.1'
+		xmlunitVersion = '2.6.4'
 		xstreamVersion = '1.4.11.1'
 		jrubyVersion = '1.7.27'
 		beanshellVersion = '2.0b5'
 		jaxbApiVersion = '2.3.1'
 		jaxbImplVersion = '2.3.0.1'
-		micrometerVersion = '1.3.2'
-		prometheusPushgatewayVersion = '0.8.0'
+		micrometerVersion = '1.3.7'
+		prometheusPushgatewayVersion = '0.8.1'
 		docResourcesVersion = '0.2.0.RELEASE'
-		assertjVersion='3.13.2'
+		assertjVersion='3.15.0'
 	}
 
 	apply plugin: 'idea'
