--- a/build.gradle
+++ b/build.gradle
@@ -46,35 +46,34 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.1.13.BUILD-SNAPSHOT'
+		springVersionDefault = '5.1.14.RELEASE'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
-		springRetryVersion = '1.2.4.RELEASE'
-		springAmqpVersion = '2.1.13.BUILD-SNAPSHOT'
-		springDataCommonsVersion = '2.1.15.BUILD-SNAPSHOT'
-		springDataGemfireVersion = '2.1.15.BUILD-SNAPSHOT'
-		springDataJpaVersion = '2.1.15.BUILD-SNAPSHOT'
-		springDataMongodbVersion = '2.1.15.BUILD-SNAPSHOT'
-		springDataNeo4jVersion = '5.1.15.BUILD-SNAPSHOT'
+		springRetryVersion = '1.2.5.RELEASE'
+		springAmqpVersion = '2.1.13.RELEASE'
+		springDataCommonsVersion = '2.1.16.RELEASE'
+		springDataGemfireVersion = '2.1.16.RELEASE'
+		springDataJpaVersion = '2.1.16.RELEASE'
+		springDataMongodbVersion = '2.1.16.RELEASE'
+		springDataNeo4jVersion = '5.1.16.RELEASE'
 		springIntegrationVersion = '5.1.9.RELEASE'
 		springLdapVersion = '2.3.2.RELEASE'
 
-		activemqVersion = '5.15.10'
-		aspectjVersion = '1.9.4'
+		activemqVersion = '5.15.11'
+		aspectjVersion = '1.9.5'
 		castorVersion = '1.4.1'
-		commonsCollectionsVersion = '3.2.2'
 		commonsDdbcpVersion = '2.5.0'
 		commonsIoVersion = '2.6'
 		commonsLangVersion = '3.8.1'
 		commonsPoolVersion = '1.6'
 		derbyVersion = '10.14.2.0'
-		groovyVersion = '2.5.8'
+		groovyVersion = '2.5.10'
 		hamcrestVersion = '1.3'
 		h2databaseVersion = '1.4.200'
-		hibernateVersion = '5.4.8.Final'
+		hibernateVersion = '5.4.12.Final'
 		hibernateValidatorVersion = '6.0.18.Final'
 		javaxElVersion = '3.0.0'
 		hsqldbVersion = '2.4.1'
-		jackson2Version = '2.9.10'
+		jackson2Version = '2.10.3'
 		gsonVersion = '2.8.6'
 		javaMailVersion = '1.6.2'
 		javaxBatchApiVersion = '1.0'
@@ -84,19 +83,19 @@ allprojects {
 		jbatchTckSpi = '1.0'
 		jettisonVersion = '1.2' //?
 		jmsVersion = '2.0.1'
-		junitVersion = '4.12'
+		junitVersion = '4.13'
 		log4jVersion = '2.11.2'
-		mysqlVersion = '8.0.18'
-		mockitoVersion = '2.23.4'
-		postgresqlVersion = '42.2.8'
+		mysqlVersion = '8.0.19'
+		mockitoVersion = '3.3.3'
+		postgresqlVersion = '42.2.10'
 		quartzVersion = '2.3.2'
 		servletApiVersion = '4.0.1'
 		sqlfireclientVersion = '1.0.3'
 		sqliteVersion = '3.25.2'
 		woodstoxVersion = '5.0.3'
-		xmlunitVersion = '2.6.2'
+		xmlunitVersion = '2.6.4'
 		xstreamVersion = '1.4.10'
-		jrubyVersion = '1.7.26'
+		jrubyVersion = '1.7.27'
 		beanshellVersion = '2.0b5'
 		jaxbApiVersion = '2.3.1'
 		jaxbImplVersion = '2.3.0.1'
