--- a/build.gradle
+++ b/build.gradle
@@ -46,35 +46,35 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.2.4.BUILD-SNAPSHOT'
+		springVersionDefault = '5.3.0-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.2.5.RELEASE'
-		springAmqpVersion = '2.2.4.BUILD-SNAPSHOT'
-		springDataCommonsVersion = '2.3.0.BUILD-SNAPSHOT'
-		springDataGemfireVersion = '2.3.0.BUILD-SNAPSHOT'
-		springDataJpaVersion = '2.3.0.BUILD-SNAPSHOT'
-		springDataMongodbVersion = '3.0.0.BUILD-SNAPSHOT'
-		springDataNeo4jVersion = '5.3.0.BUILD-SNAPSHOT'
-		springIntegrationVersion = '5.3.0.BUILD-SNAPSHOT'
-		springKafkaVersion = '2.4.2.BUILD-SNAPSHOT'
-		springLdapVersion = '2.3.2.RELEASE'
+		springAmqpVersion = '2.3.0.BUILD-SNAPSHOT' // TODO update to 2.3.0-SNAPSHOT when available
+		springDataCommonsVersion = '2.4.0-SNAPSHOT'
+		springDataGemfireVersion = '2.4.0-SNAPSHOT'
+		springDataJpaVersion = '2.4.0-SNAPSHOT'
+		springDataMongodbVersion = '3.1.0-SNAPSHOT'
+		springDataNeo4jVersion = '5.4.0-SNAPSHOT'
+		springIntegrationVersion = '5.4.0-SNAPSHOT'
+		springKafkaVersion = '2.5.1.BUILD-SNAPSHOT' // TODO update to 2.6.0-SNAPSHOT when available
+		springLdapVersion = '2.3.3.RELEASE'
 
-		activemqVersion = '5.15.11'
-		apacheAvroVersion ='1.9.1'
+		activemqVersion = '5.15.12'
+		apacheAvroVersion ='1.9.2'
 		aspectjVersion = '1.9.5'
 		commonsDdbcpVersion = '2.7.0'
 		commonsIoVersion = '2.6'
-		commonsLangVersion = '3.9'
+		commonsLangVersion = '3.10'
 		commonsPoolVersion = '1.6'
 		derbyVersion = '10.14.2.0'
-		groovyVersion = '2.5.10'
+		groovyVersion = '2.5.11'
 		hamcrestVersion = '2.2'
 		h2databaseVersion = '1.4.200'
-		hibernateVersion = '5.4.9.Final'
-		hibernateValidatorVersion = '6.1.0.Final'
+		hibernateVersion = '5.4.15.Final'
+		hibernateValidatorVersion = '6.1.5.Final'
 		javaxElVersion = '3.0.0'
 		hsqldbVersion = '2.5.0'
-		jackson2Version = '2.10.1'
+		jackson2Version = '2.11.0'
 		gsonVersion = '2.8.6'
 		javaMailVersion = '1.6.2'
 		javaxBatchApiVersion = '1.0'
@@ -86,26 +86,26 @@ allprojects {
 		jmsVersion = '2.0.1'
 		junitVersion = '4.13'
 		junitJupiterVersion = '5.6.2'
-		log4jVersion = '2.13.0'
-		mysqlVersion = '8.0.18'
-		mockitoVersion = '3.1.0'
-		postgresqlVersion = '42.2.8'
+		log4jVersion = '2.13.2'
+		mysqlVersion = '8.0.20'
+		mockitoVersion = '3.3.3'
+		postgresqlVersion = '42.2.12'
 		quartzVersion = '2.3.2'
 		servletApiVersion = '4.0.1'
 		sqlfireclientVersion = '1.0.3'
-		sqliteVersion = '3.30.1'
-		woodstoxVersion = '5.2.0'
-		xmlunitVersion = '2.6.3'
-		xstreamVersion = '1.4.11.1'
+		sqliteVersion = '3.31.1'
+		woodstoxVersion = '6.2.0'
+		xmlunitVersion = '2.6.4'
+		xstreamVersion = '1.4.12'
 		jrubyVersion = '1.7.27'
 		beanshellVersion = '2.0b5'
 		jaxbApiVersion = '2.3.1'
 		jaxbImplVersion = '2.3.0.1'
-		micrometerVersion = '1.3.3'
-		prometheusPushgatewayVersion = '0.8.0'
+		micrometerVersion = '1.5.1'
+		prometheusPushgatewayVersion = '0.9.0'
 		docResourcesVersion = '0.2.1.RELEASE'
-		assertjVersion='3.15.0'
-		mongoDbDriverSyncVersion='4.0.0-beta1'
+		assertjVersion='3.16.1'
+		mongoDbDriverSyncVersion='4.0.3'
 		testcontainersVersion='1.14.1'
 	}
 
