--- a/build.gradle
+++ b/build.gradle
@@ -46,17 +46,17 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.2.7.BUILD-SNAPSHOT'
+		springVersionDefault = '5.2.7.RELEASE'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.2.5.RELEASE'
-		springAmqpVersion = '2.2.7.BUILD-SNAPSHOT'
-		springDataCommonsVersion = '2.2.8.BUILD-SNAPSHOT'
-		springDataGemfireVersion = '2.2.8.BUILD-SNAPSHOT'
-		springDataJpaVersion = '2.2.8.BUILD-SNAPSHOT'
-		springDataMongodbVersion = '2.2.8.BUILD-SNAPSHOT'
-		springDataNeo4jVersion = '5.2.8.BUILD-SNAPSHOT'
-		springIntegrationVersion = '5.2.7.BUILD-SNAPSHOT'
-		springKafkaVersion = '2.3.9.BUILD-SNAPSHOT'
+		springAmqpVersion = '2.2.7.RELEASE'
+		springDataCommonsVersion = '2.2.8.RELEASE'
+		springDataGemfireVersion = '2.2.8.RELEASE'
+		springDataJpaVersion = '2.2.8.RELEASE'
+		springDataMongodbVersion = '2.2.8.RELEASE'
+		springDataNeo4jVersion = '5.2.8.RELEASE'
+		springIntegrationVersion = '5.2.7.RELEASE'
+		springKafkaVersion = '2.3.9.RELEASE'
 		springLdapVersion = '2.3.3.RELEASE'
 
 		activemqVersion = '5.15.12'
@@ -67,14 +67,14 @@ allprojects {
 		commonsLangVersion = '3.9'
 		commonsPoolVersion = '1.6'
 		derbyVersion = '10.14.2.0'
-		groovyVersion = '2.5.11'
-		hamcrestVersion = '2.1'
+		groovyVersion = '2.5.12'
+		hamcrestVersion = '2.2'
 		h2databaseVersion = '1.4.200'
-		hibernateVersion = '5.4.15.Final'
+		hibernateVersion = '5.4.17.Final'
 		hibernateValidatorVersion = '6.0.20.Final'
 		javaxElVersion = '3.0.0'
 		hsqldbVersion = '2.5.0'
-		jackson2Version = '2.10.4'
+		jackson2Version = '2.11.0'
 		gsonVersion = '2.8.6'
 		javaMailVersion = '1.6.2'
 		javaxBatchApiVersion = '1.0'
@@ -85,16 +85,16 @@ allprojects {
 		jettisonVersion = '1.2' //? => upgrade to 1.4 and the build fails (deprecated anyway via xstream)
 		jmsVersion = '2.0.1'
 		junitVersion = '4.13'
-		log4jVersion = '2.12.1'
+		log4jVersion = '2.13.3'
 		mysqlVersion = '8.0.20'
 		mockitoVersion = '3.3.3'
-		postgresqlVersion = '42.2.12'
+		postgresqlVersion = '42.2.13'
 		quartzVersion = '2.3.2'
 		servletApiVersion = '4.0.1'
 		sqlfireclientVersion = '1.0.3'
-		sqliteVersion = '3.28.0'
+		sqliteVersion = '3.31.1'
 		woodstoxVersion = '5.2.1'
-		xmlunitVersion = '2.6.4'
+		xmlunitVersion = '2.7.0'
 		xstreamVersion = '1.4.11.1'
 		jrubyVersion = '1.7.27'
 		beanshellVersion = '2.0b5'
