--- a/build.gradle
+++ b/build.gradle
@@ -47,17 +47,17 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.0-SNAPSHOT'
+		springVersionDefault = '5.3.0-M1'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.2.5.RELEASE'
-		springAmqpVersion = '2.3.0-SNAPSHOT'
-		springDataCommonsVersion = '2.4.0-SNAPSHOT'
-		springDataGemfireVersion = '2.4.0-SNAPSHOT'
-		springDataJpaVersion = '2.4.0-SNAPSHOT'
-		springDataMongodbVersion = '3.1.0-SNAPSHOT'
-		springDataNeo4jVersion = '5.4.0-SNAPSHOT'
-		springIntegrationVersion = '5.4.0-SNAPSHOT'
-		springKafkaVersion = '2.5.3.BUILD-SNAPSHOT' // TODO update to 2.6.0-SNAPSHOT when available
+		springAmqpVersion = '2.3.0-M1'
+		springDataCommonsVersion = '2.4.0-M1'
+		springDataGemfireVersion = '2.4.0-M1'
+		springDataJpaVersion = '2.4.0-M1'
+		springDataMongodbVersion = '3.1.0-M1'
+		springDataNeo4jVersion = '5.4.0-M1'
+		springIntegrationVersion = '5.4.0-M1'
+		springKafkaVersion = '2.5.3.RELEASE' // TODO update to 2.6.0-SNAPSHOT when available
 		springLdapVersion = '2.3.3.RELEASE'
 
 		activemqVersion = '5.15.12'
@@ -71,7 +71,7 @@ allprojects {
 		groovyVersion = '2.5.12'
 		hamcrestVersion = '2.2'
 		h2databaseVersion = '1.4.200'
-		hibernateVersion = '5.4.17.Final'
+		hibernateVersion = '5.4.18.Final'
 		hibernateValidatorVersion = '6.1.5.Final'
 		javaxElVersion = '3.0.0'
 		hsqldbVersion = '2.5.0'
@@ -94,7 +94,7 @@ allprojects {
 		quartzVersion = '2.3.2'
 		servletApiVersion = '4.0.1'
 		sqlfireclientVersion = '1.0.3'
-		sqliteVersion = '3.31.1'
+		sqliteVersion = '3.32.3'
 		woodstoxVersion = '6.2.0'
 		xmlunitVersion = '2.7.0'
 		xstreamVersion = '1.4.12'
@@ -102,7 +102,7 @@ allprojects {
 		beanshellVersion = '2.0b5'
 		jaxbApiVersion = '2.3.1'
 		jaxbImplVersion = '2.3.0.1'
-		micrometerVersion = '1.5.1'
+		micrometerVersion = '1.5.2'
 		prometheusPushgatewayVersion = '0.9.0'
 		docResourcesVersion = '0.2.1.RELEASE'
 		assertjVersion='3.16.1'
