--- a/build.gradle
+++ b/build.gradle
@@ -47,17 +47,17 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.0-M1'
+		springVersionDefault = '5.3.0-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.2.5.RELEASE'
-		springAmqpVersion = '2.3.0-M1'
-		springDataCommonsVersion = '2.4.0-M1'
-		springDataGemfireVersion = '2.4.0-M1'
-		springDataJpaVersion = '2.4.0-M1'
-		springDataMongodbVersion = '3.1.0-M1'
-		springDataNeo4jVersion = '5.4.0-M1'
-		springIntegrationVersion = '5.4.0-M1'
-		springKafkaVersion = '2.5.3.RELEASE' // TODO update to 2.6.0-SNAPSHOT when available
+		springAmqpVersion = '2.3.0-SNAPSHOT'
+		springDataCommonsVersion = '2.4.0-SNAPSHOT'
+		springDataGemfireVersion = '2.4.0-SNAPSHOT'
+		springDataJpaVersion = '2.4.0-SNAPSHOT'
+		springDataMongodbVersion = '3.1.0-SNAPSHOT'
+		springDataNeo4jVersion = '5.4.0-SNAPSHOT'
+		springIntegrationVersion = '5.4.0-SNAPSHOT'
+		springKafkaVersion = '2.5.4.BUILD-SNAPSHOT' // TODO update to 2.6.0-SNAPSHOT when available
 		springLdapVersion = '2.3.3.RELEASE'
 
 		activemqVersion = '5.15.12'
