--- a/build.gradle
+++ b/build.gradle
@@ -47,34 +47,34 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.0-SNAPSHOT'
+		springVersionDefault = '5.3.0-M2'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
-		springRetryVersion = '1.2.5.RELEASE'
-		springAmqpVersion = '2.3.0-SNAPSHOT'
-		springDataCommonsVersion = '2.4.0-SNAPSHOT'
-		springDataGemfireVersion = '2.4.0-SNAPSHOT'
-		springDataJpaVersion = '2.4.0-SNAPSHOT'
-		springDataMongodbVersion = '3.1.0-SNAPSHOT'
-		springIntegrationVersion = '5.4.0-SNAPSHOT'
-		springKafkaVersion = '2.6.0-SNAPSHOT'
+		springRetryVersion = '1.3.0'
+		springAmqpVersion = '2.3.0-M2'
+		springDataCommonsVersion = '2.4.0-M2'
+		springDataGemfireVersion = '2.4.0-M2'
+		springDataJpaVersion = '2.4.0-M2'
+		springDataMongodbVersion = '3.1.0-M2'
+		springIntegrationVersion = '5.4.0-M2'
+		springKafkaVersion = '2.6.0-M1'
 		springLdapVersion = '2.3.3.RELEASE'
 
-		activemqVersion = '5.15.12'
+		activemqVersion = '5.16.0'
 		apacheAvroVersion ='1.9.2'
-		aspectjVersion = '1.9.5'
+		aspectjVersion = '1.9.6'
 		commonsDdbcpVersion = '2.7.0'
 		commonsIoVersion = '2.6'
-		commonsLangVersion = '3.10'
+		commonsLangVersion = '3.11'
 		commonsPoolVersion = '1.6'
 		derbyVersion = '10.14.2.0'
-		groovyVersion = '2.5.12'
+		groovyVersion = '2.5.13'
 		hamcrestVersion = '2.2'
 		h2databaseVersion = '1.4.200'
-		hibernateVersion = '5.4.18.Final'
+		hibernateVersion = '5.4.20.Final'
 		hibernateValidatorVersion = '6.1.5.Final'
 		javaxElVersion = '3.0.0'
-		hsqldbVersion = '2.5.0'
-		jackson2Version = '2.11.0'
+		hsqldbVersion = '2.5.1'
+		jackson2Version = '2.11.2'
 		gsonVersion = '2.8.6'
 		javaMailVersion = '1.6.2'
 		javaxBatchApiVersion = '1.0'
@@ -87,13 +87,13 @@ allprojects {
 		junitVersion = '4.13'
 		junitJupiterVersion = '5.6.2'
 		log4jVersion = '2.13.3'
-		mysqlVersion = '8.0.20'
-		mockitoVersion = '3.3.3'
+		mysqlVersion = '8.0.21'
+		mockitoVersion = '3.4.6'
 		postgresqlVersion = '42.2.14'
 		quartzVersion = '2.3.2'
 		servletApiVersion = '4.0.1'
 		sqlfireclientVersion = '1.0.3'
-		sqliteVersion = '3.32.3'
+		sqliteVersion = '3.32.3.2'
 		woodstoxVersion = '6.2.0'
 		xmlunitVersion = '2.7.0'
 		xstreamVersion = '1.4.12'
@@ -101,11 +101,11 @@ allprojects {
 		beanshellVersion = '2.0b5'
 		jaxbApiVersion = '2.3.1'
 		jaxbImplVersion = '2.3.0.1'
-		micrometerVersion = '1.5.2'
+		micrometerVersion = '1.5.3'
 		prometheusPushgatewayVersion = '0.9.0'
-		docResourcesVersion = '0.2.1.RELEASE'
+		docResourcesVersion = '0.2.2.RELEASE'
 		assertjVersion='3.16.1'
-		mongoDbDriverSyncVersion='4.0.4'
+		mongoDbDriverSyncVersion='4.1.0'
 		testcontainersVersion='1.14.3'
 		neo4jVersion='3.2.14'
 	}
