--- a/build.gradle
+++ b/build.gradle
@@ -47,16 +47,16 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.0-M2'
+		springVersionDefault = '5.3.0-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.3.0'
-		springAmqpVersion = '2.3.0-M2'
-		springDataCommonsVersion = '2.4.0-M2'
-		springDataGemfireVersion = '2.4.0-M2'
-		springDataJpaVersion = '2.4.0-M2'
-		springDataMongodbVersion = '3.1.0-M2'
-		springIntegrationVersion = '5.4.0-M2'
-		springKafkaVersion = '2.6.0-M1'
+		springAmqpVersion = '2.3.0-SNAPSHOT'
+		springDataCommonsVersion = '2.4.0-SNAPSHOT'
+		springDataGemfireVersion = '2.4.0-SNAPSHOT'
+		springDataJpaVersion = '2.4.0-SNAPSHOT'
+		springDataMongodbVersion = '3.1.0-SNAPSHOT'
+		springIntegrationVersion = '5.4.0-SNAPSHOT'
+		springKafkaVersion = '2.6.0-SNAPSHOT'
 		springLdapVersion = '2.3.3.RELEASE'
 
 		activemqVersion = '5.16.0'
