--- a/build.gradle
+++ b/build.gradle
@@ -311,7 +311,7 @@ project('spring-batch-infrastructure') {
 
 	dependencies {
 
-		testCompile enforcedPlatform("org.springframework:spring-framework-bom:$springVersion")
+		compile enforcedPlatform("org.springframework:spring-framework-bom:$springVersion")
 
 		compile "org.springframework:spring-core:$springVersion"
 		compile "org.springframework.retry:spring-retry:$springRetryVersion"
