--- a/build.gradle
+++ b/build.gradle
@@ -229,6 +229,16 @@ configure(subprojects - project(":spring-build-src")) { subproject ->
 		archives sourcesJar
 		archives javadocJar
 	}
+
+	configurations.all {
+		resolutionStrategy {
+			eachDependency { DependencyResolveDetails details ->
+				if (details.requested.group == 'org.springframework') {
+					details.useVersion springVersion
+				}
+			}
+		}
+	}
 }
 
 subprojects {
@@ -310,8 +320,6 @@ project('spring-batch-infrastructure') {
     description = 'Spring Batch Infrastructure'
 
 	dependencies {
-
-		compile enforcedPlatform("org.springframework:spring-framework-bom:$springVersion")
 
 		compile "org.springframework:spring-core:$springVersion"
 		compile "org.springframework.retry:spring-retry:$springRetryVersion"
