--- a/build.gradle
+++ b/build.gradle
@@ -47,16 +47,16 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.0-SNAPSHOT'
+		springVersionDefault = '5.3.0-RC1'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.3.0'
-		springAmqpVersion = '2.3.0-SNAPSHOT'
-		springDataCommonsVersion = '2.4.0-SNAPSHOT'
-		springDataGeodeVersion = '2.4.0-SNAPSHOT'
-		springDataJpaVersion = '2.4.0-SNAPSHOT'
-		springDataMongodbVersion = '3.1.0-SNAPSHOT'
-		springIntegrationVersion = '5.4.0-SNAPSHOT'
-		springKafkaVersion = '2.6.0-SNAPSHOT'
+		springAmqpVersion = '2.3.0-M3'
+		springDataCommonsVersion = '2.4.0-RC1'
+		springDataGeodeVersion = '2.4.0-RC1'
+		springDataJpaVersion = '2.4.0-RC1'
+		springDataMongodbVersion = '3.1.0-RC1'
+		springIntegrationVersion = '5.4.0-M3'
+		springKafkaVersion = '2.6.1'
 		springLdapVersion = '2.3.3.RELEASE'
 
 		activemqVersion = '5.16.0'
@@ -70,7 +70,7 @@ allprojects {
 		groovyVersion = '2.5.13'
 		hamcrestVersion = '2.2'
 		h2databaseVersion = '1.4.200'
-		hibernateVersion = '5.4.20.Final'
+		hibernateVersion = '5.4.21.Final'
 		hibernateValidatorVersion = '6.1.5.Final'
 		javaxElVersion = '3.0.0'
 		hsqldbVersion = '2.5.1'
@@ -85,11 +85,11 @@ allprojects {
 		jettisonVersion = '1.2' //? => upgrade to 1.4 and the build fails (deprecated anyway via xstream)
 		jmsVersion = '2.0.1'
 		junitVersion = '4.13'
-		junitJupiterVersion = '5.6.2'
+		junitJupiterVersion = '5.7.0'
 		log4jVersion = '2.13.3'
 		mysqlVersion = '8.0.21'
-		mockitoVersion = '3.4.6'
-		postgresqlVersion = '42.2.14'
+		mockitoVersion = '3.5.10'
+		postgresqlVersion = '42.2.16'
 		quartzVersion = '2.3.2'
 		servletApiVersion = '4.0.1'
 		sqlfireclientVersion = '1.0.3'
@@ -101,13 +101,13 @@ allprojects {
 		beanshellVersion = '2.0b5'
 		jaxbApiVersion = '2.3.1'
 		jaxbImplVersion = '2.3.0.1'
-		micrometerVersion = '1.5.3'
+		micrometerVersion = '1.5.4'
 		prometheusPushgatewayVersion = '0.9.0'
 		docResourcesVersion = '0.2.2.RELEASE'
-		assertjVersion='3.16.1'
+		assertjVersion='3.17.2'
 		mongoDbDriverSyncVersion='4.1.0'
 		testcontainersVersion='1.14.3'
-		neo4jVersion='3.2.14'
+		neo4jVersion='3.2.16'
 	}
 
 	apply plugin: 'idea'
