--- a/build.gradle
+++ b/build.gradle
@@ -47,34 +47,34 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.0-SNAPSHOT'
+		springVersionDefault = '5.3.0'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.3.0'
-		springAmqpVersion = '2.3.0-SNAPSHOT'
-		springDataCommonsVersion = '2.4.0-SNAPSHOT'
-		springDataGeodeVersion = '2.4.0-SNAPSHOT'
-		springDataJpaVersion = '2.4.0-SNAPSHOT'
-		springDataMongodbVersion = '3.1.0-SNAPSHOT'
-		springIntegrationVersion = '5.4.0-SNAPSHOT'
-		springKafkaVersion = '2.6.2-SNAPSHOT'
+		springAmqpVersion = '2.3.0'
+		springDataCommonsVersion = '2.4.0'
+		springDataGeodeVersion = '2.4.0'
+		springDataJpaVersion = '2.4.0'
+		springDataMongodbVersion = '3.1.0'
+		springIntegrationVersion = '5.4.0'
+		springKafkaVersion = '2.6.2'
 		springLdapVersion = '2.3.3.RELEASE'
 
 		activemqVersion = '5.15.13'
 		apacheAvroVersion ='1.9.2'
 		aspectjVersion = '1.9.6'
-		commonsDdbcpVersion = '2.7.0'
-		commonsIoVersion = '2.6'
+		commonsDdbcpVersion = '2.8.0'
+		commonsIoVersion = '2.8.0'
 		commonsLangVersion = '3.11'
 		commonsPoolVersion = '1.6'
 		derbyVersion = '10.14.2.0'
 		groovyVersion = '2.5.13'
 		hamcrestVersion = '2.2'
 		h2databaseVersion = '1.4.200'
-		hibernateVersion = '5.4.21.Final'
-		hibernateValidatorVersion = '6.1.5.Final'
+		hibernateVersion = '5.4.22.Final'
+		hibernateValidatorVersion = '6.1.6.Final'
 		javaxElVersion = '3.0.0'
 		hsqldbVersion = '2.5.1'
-		jackson2Version = '2.11.2'
+		jackson2Version = '2.11.3'
 		gsonVersion = '2.8.6'
 		javaMailVersion = '1.6.2'
 		javaxBatchApiVersion = '1.0'
@@ -87,27 +87,27 @@ allprojects {
 		junitVersion = '4.13.1'
 		junitJupiterVersion = '5.7.0'
 		log4jVersion = '2.13.3'
-		mysqlVersion = '8.0.21'
-		mockitoVersion = '3.5.10'
-		postgresqlVersion = '42.2.16'
+		mysqlVersion = '8.0.22'
+		mockitoVersion = '3.6.0'
+		postgresqlVersion = '42.2.18'
 		quartzVersion = '2.3.2'
 		servletApiVersion = '4.0.1'
 		sqlfireclientVersion = '1.0.3'
 		sqliteVersion = '3.32.3.2'
-		woodstoxVersion = '6.2.1'
+		woodstoxVersion = '6.2.3'
 		xmlunitVersion = '2.7.0'
 		xstreamVersion = '1.4.12'
 		jrubyVersion = '1.7.27'
 		beanshellVersion = '2.0b5'
 		jaxbApiVersion = '2.3.1'
 		jaxbImplVersion = '2.3.0.1'
-		micrometerVersion = '1.5.4'
+		micrometerVersion = '1.5.6'
 		prometheusPushgatewayVersion = '0.9.0'
 		docResourcesVersion = '0.2.2.RELEASE'
-		assertjVersion='3.17.2'
-		mongoDbDriverSyncVersion='4.1.0'
+		assertjVersion='3.18.0'
+		mongoDbDriverSyncVersion='4.1.1'
 		testcontainersVersion='1.14.3'
-		neo4jVersion='3.2.16'
+		neo4jVersion='3.2.17'
 	}
 
 	apply plugin: 'idea'
