--- a/build.gradle
+++ b/build.gradle
@@ -47,16 +47,16 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.0'
+		springVersionDefault = '5.3.2-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.3.0'
-		springAmqpVersion = '2.3.0'
-		springDataCommonsVersion = '2.4.0'
-		springDataGeodeVersion = '2.4.0'
-		springDataJpaVersion = '2.4.0'
-		springDataMongodbVersion = '3.1.0'
-		springIntegrationVersion = '5.4.0'
-		springKafkaVersion = '2.6.2'
+		springAmqpVersion = '2.3.2-SNAPSHOT'
+		springDataCommonsVersion = '2.4.2-SNAPSHOT'
+		springDataGeodeVersion = '2.4.2-SNAPSHOT'
+		springDataJpaVersion = '2.4.2-SNAPSHOT'
+		springDataMongodbVersion = '3.1.2-SNAPSHOT'
+		springIntegrationVersion = '5.4.2-SNAPSHOT'
+		springKafkaVersion = '2.6.4-SNAPSHOT'
 		springLdapVersion = '2.3.3.RELEASE'
 
 		activemqVersion = '5.15.13'
