Add maven central to buildscript repository

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@
 
 buildscript {
 	repositories {
+		mavenCentral()
 		maven { url 'https://repo.spring.io/plugins-release' }
 		maven { url 'https://plugins.gradle.org/m2/' }
 	}
