--- a/build.gradle
+++ b/build.gradle
@@ -48,16 +48,16 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.3.2-SNAPSHOT'
+		springVersionDefault = '5.3.2'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.3.0'
-		springAmqpVersion = '2.3.2-SNAPSHOT'
-		springDataCommonsVersion = '2.4.2-SNAPSHOT'
-		springDataGeodeVersion = '2.4.2-SNAPSHOT'
-		springDataJpaVersion = '2.4.2-SNAPSHOT'
-		springDataMongodbVersion = '3.1.2-SNAPSHOT'
-		springIntegrationVersion = '5.4.2-SNAPSHOT'
-		springKafkaVersion = '2.6.4-SNAPSHOT'
+		springAmqpVersion = '2.3.2'
+		springDataCommonsVersion = '2.4.2'
+		springDataGeodeVersion = '2.4.2'
+		springDataJpaVersion = '2.4.2'
+		springDataMongodbVersion = '3.1.2'
+		springIntegrationVersion = '5.4.2'
+		springKafkaVersion = '2.6.4'
 		springLdapVersion = '2.3.3.RELEASE'
 
 		activemqVersion = '5.15.13'
@@ -68,10 +68,10 @@ allprojects {
 		commonsLangVersion = '3.11'
 		commonsPoolVersion = '1.6'
 		derbyVersion = '10.14.2.0'
-		groovyVersion = '2.5.13'
+		groovyVersion = '2.5.14'
 		hamcrestVersion = '2.2'
 		h2databaseVersion = '1.4.200'
-		hibernateVersion = '5.4.22.Final'
+		hibernateVersion = '5.4.25.Final'
 		hibernateValidatorVersion = '6.1.6.Final'
 		javaxElVersion = '3.0.0'
 		hsqldbVersion = '2.5.1'
@@ -89,7 +89,7 @@ allprojects {
 		junitJupiterVersion = '5.7.0'
 		log4jVersion = '2.13.3'
 		mysqlVersion = '8.0.22'
-		mockitoVersion = '3.6.0'
+		mockitoVersion = '3.6.28'
 		postgresqlVersion = '42.2.18'
 		quartzVersion = '2.3.2'
 		servletApiVersion = '4.0.1'
@@ -102,13 +102,13 @@ allprojects {
 		beanshellVersion = '2.0b5'
 		jaxbApiVersion = '2.3.1'
 		jaxbImplVersion = '2.3.0.1'
-		micrometerVersion = '1.5.6'
+		micrometerVersion = '1.5.8'
 		prometheusPushgatewayVersion = '0.9.0'
-		docResourcesVersion = '0.2.2.RELEASE'
-		assertjVersion='3.18.0'
+		docResourcesVersion = '0.2.5'
+		assertjVersion='3.18.1'
 		mongoDbDriverSyncVersion='4.1.1'
-		testcontainersVersion='1.14.3'
-		neo4jVersion='3.2.17'
+		testcontainersVersion='1.15.0'
+		neo4jVersion='3.2.18'
 	}
 
 	apply plugin: 'idea'
