--- a/build.gradle
+++ b/build.gradle
@@ -47,35 +47,35 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.2.12.BUILD-SNAPSHOT'
+		springVersionDefault = '5.2.12.RELEASE'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.2.5.RELEASE'
-		springAmqpVersion = '2.2.13.BUILD-SNAPSHOT'
-		springDataCommonsVersion = '2.2.12.BUILD-SNAPSHOT'
-		springDataGemfireVersion = '2.2.12.BUILD-SNAPSHOT'
-		springDataJpaVersion = '2.2.12.BUILD-SNAPSHOT'
-		springDataMongodbVersion = '2.2.12.BUILD-SNAPSHOT'
-		springDataNeo4jVersion = '5.2.12.BUILD-SNAPSHOT'
-		springIntegrationVersion = '5.2.10.BUILD-SNAPSHOT'
-		springKafkaVersion = '2.3.13.BUILD-SNAPSHOT'
+		springAmqpVersion = '2.2.13.RELEASE'
+		springDataCommonsVersion = '2.2.12.RELEASE'
+		springDataGemfireVersion = '2.2.12.RELEASE'
+		springDataJpaVersion = '2.2.12.RELEASE'
+		springDataMongodbVersion = '2.2.12.RELEASE'
+		springDataNeo4jVersion = '5.2.12.RELEASE'
+		springIntegrationVersion = '5.2.10.RELEASE'
+		springKafkaVersion = '2.3.13.RELEASE'
 		springLdapVersion = '2.3.3.RELEASE'
 
-		activemqVersion = '5.15.12'
+		activemqVersion = '5.15.13'
 		apacheAvroVersion ='1.9.2'
-		aspectjVersion = '1.9.5'
+		aspectjVersion = '1.9.6'
 		commonsDdbcpVersion = '2.7.0'
 		commonsIoVersion = '2.6'
 		commonsLangVersion = '3.9'
 		commonsPoolVersion = '1.6'
 		derbyVersion = '10.14.2.0'
-		groovyVersion = '2.5.12'
+		groovyVersion = '2.5.14'
 		hamcrestVersion = '2.2'
 		h2databaseVersion = '1.4.200'
-		hibernateVersion = '5.4.17.Final'
-		hibernateValidatorVersion = '6.0.20.Final'
+		hibernateVersion = '5.4.25.Final'
+		hibernateValidatorVersion = '6.0.21.Final'
 		javaxElVersion = '3.0.0'
-		hsqldbVersion = '2.5.0'
-		jackson2Version = '2.10.4'
+		hsqldbVersion = '2.5.1'
+		jackson2Version = '2.10.5.1'
 		gsonVersion = '2.8.6'
 		javaMailVersion = '1.6.2'
 		javaxBatchApiVersion = '1.0'
@@ -85,11 +85,11 @@ allprojects {
 		jbatchTckSpi = '1.0'
 		jettisonVersion = '1.2' //? => upgrade to 1.4 and the build fails (deprecated anyway via xstream)
 		jmsVersion = '2.0.1'
-		junitVersion = '4.13'
+		junitVersion = '4.13.1'
 		log4jVersion = '2.13.3'
-		mysqlVersion = '8.0.20'
+		mysqlVersion = '8.0.22'
 		mockitoVersion = '3.3.3'
-		postgresqlVersion = '42.2.13'
+		postgresqlVersion = '42.2.18'
 		quartzVersion = '2.3.2'
 		servletApiVersion = '4.0.1'
 		sqlfireclientVersion = '1.0.3'
@@ -101,10 +101,10 @@ allprojects {
 		beanshellVersion = '2.0b5'
 		jaxbApiVersion = '2.3.1'
 		jaxbImplVersion = '2.3.0.1'
-		micrometerVersion = '1.3.9'
+		micrometerVersion = '1.3.16'
 		prometheusPushgatewayVersion = '0.9.0'
-		docResourcesVersion = '0.2.0.RELEASE'
-		assertjVersion='3.16.1'
+		docResourcesVersion = '0.2.5'
+		assertjVersion='3.18.1'
 	}
 
 	apply plugin: 'idea'
