--- a/spring-batch-jsr352-tck/pom.xml
+++ b/spring-batch-jsr352-tck/pom.xml
@@ -51,7 +51,7 @@
 				<executions>
 					<execution>
 						<id>run-jsr352-tck</id>
-						<phase>test</phase>
+						<phase>verify</phase>
 						<goals>
 							<goal>run</goal>
 						</goals>
