Add maven gpg plugin to sign artifacts

--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@
 		<maven-source-plugin.version>3.0.1</maven-source-plugin.version>
 		<jacoco-maven-plugin.version>0.8.6</jacoco-maven-plugin.version>
 		<flatten-maven-plugin.version>1.2.5</flatten-maven-plugin.version>
+		<maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
 	</properties>
 
 	<build>
@@ -269,6 +270,27 @@
 								<configuration>
 									<dataFile>${project.build.directory}/jacoco.exec</dataFile>
 								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>sign-artifacts</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>${maven-gpg-plugin.version}</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
 							</execution>
 						</executions>
 					</plugin>
