Add maven deploy plugin

--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,7 @@
 		<jacoco-maven-plugin.version>0.8.6</jacoco-maven-plugin.version>
 		<flatten-maven-plugin.version>1.2.5</flatten-maven-plugin.version>
 		<maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
+		<maven-deploy-plugin.version>2.7</maven-deploy-plugin.version>
 	</properties>
 
 	<build>
@@ -237,6 +238,11 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>${maven-deploy-plugin.version}</version>
 			</plugin>
 		</plugins>
 	</build>
