--- a/spring-batch-docs/pom.xml
+++ b/spring-batch-docs/pom.xml
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>io.spring.docresources</groupId>
             <artifactId>spring-doc-resources</artifactId>
-            <version>0.2.5</version>
+            <version>${spring-doc-resources.version}</version>
             <type>zip</type>
         </dependency>
     </dependencies>
@@ -24,6 +24,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
+                <version>${maven-dependency-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>unpack-resources</id>
@@ -44,12 +45,12 @@
             <plugin>
                 <groupId>org.asciidoctor</groupId>
                 <artifactId>asciidoctor-maven-plugin</artifactId>
-                <version>2.1.0</version>
+                <version>${asciidoctor-maven-plugin.version}</version>
                 <dependencies>
                     <dependency>
                         <groupId>org.asciidoctor</groupId>
                         <artifactId>asciidoctorj-pdf</artifactId>
-                        <version>1.5.3</version>
+                        <version>${asciidoctorj-pdf.version}</version>
                     </dependency>
                 </dependencies>
                 <configuration>
@@ -66,7 +67,6 @@
                         <configuration>
                             <backend>html5</backend>
                             <doctype>book</doctype>
-                            <sourceHighlighter>highlight.js</sourceHighlighter>
                             <attributes>
                                 <docinfo>shared</docinfo>
                                 <stylesdir>css/</stylesdir>
@@ -74,6 +74,7 @@
                                 <linkcss>true</linkcss>
                                 <icons>font</icons>
                                 <sectanchors/>
+                                <source-highlighter>highlight.js</source-highlighter>
                                 <highlightjsdir>js/highlight</highlightjsdir>
                                 <highlightjs-theme>github</highlightjs-theme>
                                 <idprefix/>
@@ -110,7 +111,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.3.0</version>
+                <version>${maven-assembly-plugin.version}</version>
                 <configuration>
                     <descriptors>
                         <descriptor>src/assembly/docs.xml</descriptor>
