Fix tests failing on Windows
Before this commit, tests in this change set
were failing on MS Windows due to the file
comparison method which was based on file
content hash comparison. With this method,
differences between OS line endings
(LF vs CRLF) in generated json files produce
different hashes.

This commit uses a logical json comparison
based on the jsonassert library.

--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,7 @@
 		<com.ibm.jbatch-tck-spi.version>1.0</com.ibm.jbatch-tck-spi.version>
 		<javax.inject.version>1</javax.inject.version>
 		<jettison.version>1.2</jettison.version>
+		<jsonassert.version>1.5.0</jsonassert.version>
 
 		<!-- samples dependencies -->
 		<hibernate-entitymanager.version>5.4.24.Final</hibernate-entitymanager.version>
