Exclude spring-batch-docs from being published to Artifactory
Resolves #3922

--- a/build.gradle
+++ b/build.gradle
@@ -404,6 +404,7 @@ project('spring-batch-infrastructure') {
 
 project('spring-batch-docs') {
 	description = 'Spring Batch Docs'
+	project.tasks.findByPath("artifactoryPublish")?.enabled = false
 }
 
 project('spring-batch-core-tests') {
