Add ItemWriter for Redis
Issue #3957

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
 		<spring-data-commons.version>3.2.0-SNAPSHOT</spring-data-commons.version>
 		<spring-data-jpa.version>3.2.0-SNAPSHOT</spring-data-jpa.version>
 		<spring-data-mongodb.version>4.2.0-SNAPSHOT</spring-data-mongodb.version>
+		<spring-data-redis.version>2.5.2-SNAPSHOT</spring-data-redis.version>
 		<spring-kafka.version>3.0.11-SNAPSHOT</spring-kafka.version>
 		<spring-amqp.version>3.0.9-SNAPSHOT</spring-amqp.version>
 		<spring-ldap.version>3.2.0-SNAPSHOT</spring-ldap.version>
