Add Docker integration test for SAP HANA

--- a/spring-batch-core/pom.xml
+++ b/spring-batch-core/pom.xml
@@ -185,6 +185,12 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.sap.cloud.db.jdbc</groupId>
+			<artifactId>ngdbc</artifactId>
+			<version>${hana.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>${commons-io.version}</version>
