--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@
 		<h2.version>1.4.200</h2.version>
 		<sqlite.version>3.34.0</sqlite.version>
 		<derby.version>10.14.2.0</derby.version>
+		<hana.version>2.9.12</hana.version>
 		<activemq.version>5.15.14</activemq.version>
 		<jaxb-api.version>2.3.1</jaxb-api.version>
 		<jaxb-core.version>2.3.0.1</jaxb-core.version>
